# CPD

./: CHANGELOG.md  CONSTITUTION.md  PROJECT.md  README.md  azure.sql  pyproject.toml  pytest.ini  requirements.txt  sqlite.sql
.github/workflows/: ci.yml
.specify/adr/: ADR-001-adopt-constitution-and-dual-storage.md
.specify/memory/: constitution.md  context-capsule.json
.specify/templates/: plan-template.md
docs/: quickstart-m1.md
docs/architecture/: m1-overview.md
scripts/: bootstrap.ps1  validate_quickstart.ps1
specs/001-milestone-m1-basic/: data-model.md  original-user-input.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  verification.md
specs/002-milestone-m2.1-crud/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/app/: main.py  main_window.py  run.py
src/core/: errors.py
src/cpd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lib/: paths.py  redaction.py
src/logging/: config.py  gui_bridge.py
src/migrations/: 0001_baseline.sql
src/services/: app_context.py  azure_ad_token_manager.py  background_runner.py  database_gateway.py  logging_model.py  migration_service.py  mssql_connection.py  project_creator_local.py  project_creator_remote.py  project_loader.py  project_service.py  recent_projects.py  schema_validator.py  secure_credential_manager.py  settings_store.py
src/storage/: adapter.py  mssql_adapter.py  sqlite_adapter.py
src/ui/: create_project_dialog.py  log_panel.py  message_dialogs.py  mssql_params_dialog.py  startup_window.py
tests/: conftest.py
(+41 files in other folders)
