[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpd"
version = "0.1.0"
description = "Common Project Database (CPD) - Windows desktop app (M1 scaffolding)"
requires-python = ">=3.13"
dependencies = [
    "PySide6",
    "pyodbc",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-qt",
]

